added css code and modified html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    
     <title>ElectroGeeks</title>
-    <link rel="stylesheet" href="EGWebPage.css";>
+    <link rel="stylesheet" href="wp.css";>
 </head>
 <body>
     <div class="header">
